# Campus-Academic-Helper

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  preview.html
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/database/: __init__.py
backend/app/router/: __init__.py  exam.py  sync.py  video.py
backend/app/services/: claude_service.py  exam_service.py  sync_service.py  video_service.py
backend/app/skills/: __init__.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Dashboard.tsx
frontend/src/hooks/: useData.ts
frontend/src/pages/: ExamScanPage.tsx  StatsPage.tsx  VideoNotesPage.tsx
frontend/src/services/: api.ts
skills/skill_Adv.Math/: SKILL.md
skills/skill_CE/: SKILL.md
