[project]
name = "learnmate-backend"
version = "1.0.0"
description = "乐乐学业助手后端服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.12",
    "pydantic==2.9.2",
    "sqlite-utils==3.38",
    "yt-dlp==2024.10.22",
    "openai-whisper==20240930",
    "paddleocr==2.9.1",
    "anthropic==0.38.0",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
